# 100x-engineer-hackathon

./: .env.example  .gitignore  README.md  create_project_structure.sh  package.json  pyproject.toml
docs/: SPEC.md
docs/code/: PROJECT_STATEMENT.md  QUESTIONS.md
docs/project/: EXA.md  JINA.md  LLM.md
docs/workflow_visualizer/: customer_discovery.md  market_analyser.md  market_expansion.md  product_evolution.md  system_architecture.md
src/analysis/: customer_discoverer.py  market_analysis.py
src/app/: config.py  db.py  exa.py  jina.py  llm.py  main.py
src/app/models/: __init__.py  competitor.py  customer.py  expansion.py  market.py  product.py  user.py
src/app/routers/: customer_discovery.py  market_analysis.py  market_expansion.py  product_evolution.py
src/app/schemas/: llm.py  visualization.py
src/exp/: customer_discoverer.ipynb  exa_call.ipynb  jina_exp.ipynb  llm_call.ipynb  market_analysis.ipynb  market_expnansion.ipynb
src/frontend/: app_page.py  flow.py
src/ui/: chat_ui.py  ui.py
